Establish client state boundary